--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'base'
-    id 'com.palantir.docker' version '0.31.0'
-    id 'com.palantir.docker-run' version '0.31.0'
+    id 'com.palantir.docker' version '0.35.0'
+    id 'com.palantir.docker-run' version '0.35.0'
     id 'pl.allegro.tech.build.axion-release' version '1.13.6'
 }
 
@@ -18,4 +18,36 @@ dockerRun {
     ports '8080:8080'
     clean true
     daemonize false
+}
+
+repositories {
+    mavenCentral()
+}
+
+group = 'com.ebilly'
+version = '0.0.1'
+
+apply plugin: 'java'
+
+dependencies {
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    testImplementation 'junit:junit:4.12'
+}
+
+apply plugin: 'maven-publish'
+
+
+publishing {
+    publications {
+        customLibrary(MavenPublication) {
+            from components.java
+        }
+    }
+
+    repositories {
+        maven {
+            name = 'sampleRepo'
+            url = layout.buildDirectory.dir("repo")
+        }
+    }
 }
